--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
     border-radius: 3px;
     transition: .2s all;
     cursor: pointer;
+
+    transform-style: preserve-3d;
+    /* backface-visibility: hidden; */
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+    transform: rotateY(0deg);
 }
 
 .card-container:hover .card {
@@ -39,4 +45,6 @@ body {
     box-shadow: 0 8px 20px 0px rgba(0,0,0,0.125);
     background: #A82C2C;
     color: white;
+
+    transform: rotateY(180deg);
 }
